--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,7 +9,17 @@
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
   		<table class='table'>
-  		  <tr>
+
+  		    <% @book.book_comments.each do |comment| %>
+  		    <tr>
+  		    <td><%= link_to user_path(comment.user) do %>
+  		      <%= attachment_image_tag comment.user, :profile_image, size: "40x40" %>
+  		      <%= comment.user.name %>
+  		      <% end %></td>
+  		    <td><%= comment.comment %></td>
+  		    </tr>
+  		    <% end %>
+  		    <tr>
   		    <td><%= link_to user_path(@book.user) do %>
             <%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg") %><br>
             <%= @book.user.name %>
@@ -17,12 +27,28 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
+
+          <% if @book.favorited_by?(current_user) %>
+            <td><%= link_to book_favorites_path(@book), method: :delete do %>
+              <i class="fas fa-heart"></i><%= @book.favorites.count %>
+            <% end %></td>
+          <% else %>
+              <td><%= link_to book_favorites_path(@book), method: :post do %>
+                <i class="far fa-heart"></i><%= @book.favorites.count %>
+              <% end %></td>
+          <% end %>
+          <td>コメント数：<%= @book.book_comments.count %></td>
           <% if current_user.id == @user.id %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
         </tr>
       </table>
+      <%= form_with(model: [@book, @book_comment], local:true) do |f| %>
+      <%= f.label :comment %>
+      <%= f.text_area :comment, class: 'form-control' %>
+      <%= f.submit %>
+      <% end %>
     </div>
   </div>
 </div>
