--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -13,10 +13,13 @@
   		    <% @book.book_comments.each do |comment| %>
   		    <tr>
   		    <td><%= link_to user_path(comment.user) do %>
-  		      <%= attachment_image_tag comment.user, :profile_image, size: "40x40" %>
+  		      <%= attachment_image_tag comment.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg", size: "40x40" %>
   		      <%= comment.user.name %>
   		      <% end %></td>
   		    <td><%= comment.comment %></td>
+  		    <td><% if comment.user_id == current_user.id %>
+  		          <%= link_to "delete", book_book_comment_path(@book, comment.id), method: :delete %>
+  		          <% end %></td>
   		    </tr>
   		    <% end %>
   		    <tr>
