--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,15 +16,10 @@
         </td>
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
-        <% if book.favorited_by?(current_user) %>
-          <td><%= link_to book_favorites_path(book), method: :delete do %>
-          <i class="fas fa-heart"></i><%= book.favorites.count %>
-          <% end %></td>
-        <% else %>
-          <td><%= link_to book_favorites_path(book), method: :post do %>
-          <i class="far fa-heart"></i><%= book.favorites.count %>
-          <% end %></td>
-        <% end %>
+        <td id="favorite_buttons_<%= book.id %>">
+          <%=render 'books/favorites', book: book %>
+        </td>
+        
         <td>コメント数：<%= book.book_comments.count %></td>
       </tr>
     <% end %>
