--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,21 +8,11 @@
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
+  		<div id="comments_area">
+  		  <%= render 'book_comments/index', book: @book %>
+  		</div>
   		<table class='table'>
-
-  		    <% @book.book_comments.each do |comment| %>
-  		    <tr>
-  		    <td><%= link_to user_path(comment.user) do %>
-  		      <%= attachment_image_tag comment.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg", size: "40x40" %>
-  		      <%= comment.user.name %>
-  		      <% end %></td>
-  		    <td><%= comment.comment %></td>
-  		    <td><% if comment.user_id == current_user.id %>
-  		          <%= link_to "delete", book_book_comment_path(@book, comment.id), method: :delete %>
-  		          <% end %></td>
-  		    </tr>
-  		    <% end %>
-  		    <tr>
+              <tr>
   		    <td><%= link_to user_path(@book.user) do %>
             <%= attachment_image_tag(@book.user, :profile_image, :fill, 100, 100, fallback: "no-image-icon.jpg") %><br>
             <%= @book.user.name %>
@@ -32,21 +22,21 @@
           <td><%= @book.body %></td>
 
            <td id="favorite_buttons_<%= @book.id %>">
-              <%= render 'books/favorites', book: @book %>
+              <%= render 'favorites/favorite-btn', book: @book %>
            </td>
 
           <td>コメント数：<%= @book.book_comments.count %></td>
-          <% if current_user.id == @user.id %>
+          <% if current_user == @book.user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
         </tr>
+
       </table>
-      <%= form_with(model: [@book, @book_comment], local:true) do |f| %>
-      <%= f.label :comment %>
-      <%= f.text_area :comment, class: 'form-control' %>
-      <%= f.submit "投稿" %>
-      <% end %>
+      <div class="comment-create", id="comment_form">
+       <%= render 'book_comments/form', book: @book, book_comment: @book_comment %>
+       </div>
+
     </div>
   </div>
 </div>
